--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,32 +17,40 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  *
 -->
-<manifest package="net.kervala.comicsreader"
-      android:versionCode="2"
-      xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="@string/version">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="net.kervala.comicsreader"
+    android:versionCode="11"
+    android:versionName="@string/version" >
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-feature
-      android:name="android.hardware.touchscreen"
-    />
+
     <uses-sdk
-      android:minSdkVersion="4"
-      android:targetSdkVersion="10"
-    />
+        android:minSdkVersion="4"
+        android:targetSdkVersion="10" />
+
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:resizeable="true"
+        android:smallScreens="true" />
+
     <application
-      android:label="@string/app_name"
-      android:icon="@drawable/icon"
-      android:name="ComicsApplication">
+        android:name="ComicsApplication"
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
         <activity
-          android:name="ViewerActivity"
-          android:configChanges="keyboardHidden|orientation"
-          android:theme="@style/Theme.Viewer"
-          >
+            android:name="ViewerActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:theme="@style/Theme.Viewer" >
             <intent-filter>
                 <action android:name="android.intent.action.PICK" />
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="application/x-cbz" />
                 <data android:mimeType="application/x-cbr" />
                 <data android:mimeType="image/png" />
@@ -50,22 +58,29 @@
             </intent-filter>
         </activity>
         <activity
-          android:name="BrowserActivity"
-          android:configChanges="keyboardHidden|orientation">
+            android:name="BrowserActivity"
+            android:configChanges="keyboardHidden|orientation" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.GET_CONTENT" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="application/x-cbz" />
                 <data android:mimeType="application/x-cbr" />
             </intent-filter>
         </activity>
         <activity android:name="ComicsPreferenceActivity" />
-        <activity android:name="BookmarksActivity" android:configChanges="keyboardHidden|orientation" android:label="@string/bookmarks_title" />
-        <activity android:name="AboutActivity"></activity>
+        <activity
+            android:name="BookmarksActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/bookmarks_title" />
+        <activity android:name="AboutActivity" >
+        </activity>
     </application>
+
 </manifest>
- 
