--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,11 +41,11 @@
     <application
         android:name="ComicsApplication"
         android:icon="@drawable/icon"
-        android:label="@string/app_name" android:largeHeap="true">
+        android:label="@string/app_name" android:largeHeap="true" android:hardwareAccelerated="true">
         <activity
             android:name="ViewerActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:theme="@style/Theme.Viewer" >
+            android:theme="@style/Theme.Viewer" android:hardwareAccelerated="false">
             <intent-filter>
                 <action android:name="android.intent.action.PICK" />
                 <action android:name="android.intent.action.VIEW" />
