--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
+
     <uses-sdk
         android:minSdkVersion="4"
         android:targetSdkVersion="19" />
