--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,8 @@
 import org.apache.tools.ant.taskdefs.condition.Os
-
 apply plugin: 'com.android.application'
-
 android {
     compileSdkVersion 23
-    buildToolsVersion '23.0.3'
+    buildToolsVersion '24.0.0'
 
     sourceSets.main.jni.srcDirs = [] // disable automatic ndk-build call
     sourceSets.main.jniLibs.srcDir 'src/main/libs'
@@ -52,42 +50,35 @@ android {
         abortOnError false
     }
 }
-
 // call regular ndk-build(.cmd) script from app directory
 task ndkBuildDebug(type: Exec) {
     workingDir file('src/main')
     commandLine getNdkBuildCmd(), 'NDK_DEBUG=1', 'V=1'
 }
-
 task ndkBuildRelease(type: Exec) {
     workingDir file('src/main')
     commandLine getNdkBuildCmd(), 'NDK_DEBUG=0', 'V=1'
 }
-
 tasks.withType(JavaCompile) {
-    compileTask -> if (compileTask.name.endsWith("DebugJavaWithJavac")) {
-        compileTask.dependsOn ndkBuildDebug
-    } else if (compileTask.name.endsWith("ReleaseJavaWithJavac")) {
-        compileTask.dependsOn ndkBuildRelease
-    }
+    compileTask ->
+        if (compileTask.name.endsWith("DebugJavaWithJavac")) {
+            compileTask.dependsOn ndkBuildDebug
+        } else if (compileTask.name.endsWith("ReleaseJavaWithJavac")) {
+            compileTask.dependsOn ndkBuildRelease
+        }
 }
-
 task cleanNative(type: Exec) {
     workingDir file('src/main')
     commandLine getNdkBuildCmd(), 'V=1', 'clean'
 }
-
 clean.dependsOn cleanNative
-
 // create a file "version.txt" in "app" folder with current version
 task generateVersion() << {
     file('build/version.txt').text = android.defaultConfig.versionName
 }
-
 tasks.withType(JavaCompile) {
     compileTask -> compileTask.dependsOn generateVersion
 }
-
 def getNdkDir() {
     if (System.env.NDK_ROOT != null)
         return System.env.NDK_ROOT
@@ -100,7 +91,6 @@ def getNdkDir() {
 
     return ndkdir
 }
-
 def getNdkBuildCmd() {
     def ndkbuild = getNdkDir() + "/ndk-build"
     if (Os.isFamily(Os.FAMILY_WINDOWS))
@@ -108,7 +98,6 @@ def getNdkBuildCmd() {
 
     return ndkbuild
 }
-
 def getHgRevision() {
     def os = new ByteArrayOutputStream()
     exec {
@@ -118,13 +107,11 @@ def getHgRevision() {
 
     return os.toString()
 }
-
 def getDate() {
     def date = new Date()
     def formattedDate = date.format('yyyy-MM-dd HH:mm:ss')
     return formattedDate
 }
-
 def getAndroidKeystore() {
     Properties properties = new Properties()
     properties.load(project.rootProject.file('ant.properties').newDataInputStream())
@@ -134,7 +121,6 @@ def getAndroidKeystore() {
 
     return keystore
 }
-
 def getAndroidStorePassword() {
     Properties properties = new Properties()
     properties.load(project.rootProject.file('ant.properties').newDataInputStream())
@@ -144,7 +130,6 @@ def getAndroidStorePassword() {
 
     return password
 }
-
 def getAndroidKeyAlias() {
     Properties properties = new Properties()
     properties.load(project.rootProject.file('ant.properties').newDataInputStream())
@@ -154,7 +139,6 @@ def getAndroidKeyAlias() {
 
     return keyalias
 }
-
 def getAndroidKeyPassword() {
     Properties properties = new Properties()
     properties.load(project.rootProject.file('ant.properties').newDataInputStream())
@@ -163,4 +147,7 @@ def getAndroidKeyPassword() {
         throw new GradleException("Key alias password not found. Define location with key.alias.password in the ant.properties file.")
 
     return password
+}
+
+dependencies {
 }
