--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,8 @@
-import org.apache.tools.ant.taskdefs.condition.Os
 apply plugin: 'com.android.application'
+
 android {
     compileSdkVersion 23
-    buildToolsVersion '24.0.0'
-
-    sourceSets.main.jni.srcDirs = [] // disable automatic ndk-build call
-    sourceSets.main.jniLibs.srcDir 'src/main/libs'
+    buildToolsVersion '25.0.2'
 
     signingConfigs {
         release {
@@ -18,17 +15,27 @@ android {
 
     defaultConfig {
         applicationId 'net.kervala.comicsreader'
-        minSdkVersion 4
+        minSdkVersion 9
         targetSdkVersion 23
         versionCode 28
         versionName "2.2." + getHgRevision()
         signingConfig signingConfigs.release
-    }
+
+		externalNativeBuild {
+			cmake {
+				arguments "-DANDROID_STL_FORCE_FEATURES=TRUE", "-DANDROID_PLATFORM=android-9"
+			}
+		}
+
+		ndk {
+			abiFilters 'x86', 'armeabi-v7a'
+		}
+	}
 
     buildTypes {
         release {
             minifyEnabled false
-            shrinkResources true
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             resValue "string", "build_date", getDate()
             signingConfig signingConfigs.release
@@ -49,55 +56,25 @@ android {
     lintOptions {
         abortOnError false
     }
-}
-// call regular ndk-build(.cmd) script from app directory
-task ndkBuildDebug(type: Exec) {
-    workingDir file('src/main')
-    commandLine getNdkBuildCmd(), 'NDK_DEBUG=1', 'V=1'
-}
-task ndkBuildRelease(type: Exec) {
-    workingDir file('src/main')
-    commandLine getNdkBuildCmd(), 'NDK_DEBUG=0', 'V=1'
-}
-tasks.withType(JavaCompile) {
-    compileTask ->
-        if (compileTask.name.endsWith("DebugJavaWithJavac")) {
-            compileTask.dependsOn ndkBuildDebug
-        } else if (compileTask.name.endsWith("ReleaseJavaWithJavac")) {
-            compileTask.dependsOn ndkBuildRelease
+
+    productFlavors {
+    }
+    externalNativeBuild {
+        cmake {
+            path 'src/main/jni/CMakeLists.txt'
         }
+    }
 }
-task cleanNative(type: Exec) {
-    workingDir file('src/main')
-    commandLine getNdkBuildCmd(), 'V=1', 'clean'
-}
-clean.dependsOn cleanNative
+
 // create a file "version.txt" in "app" folder with current version
 task generateVersion() << {
     file('build/version.txt').text = android.defaultConfig.versionName
 }
+
 tasks.withType(JavaCompile) {
     compileTask -> compileTask.dependsOn generateVersion
 }
-def getNdkDir() {
-    if (System.env.NDK_ROOT != null)
-        return System.env.NDK_ROOT
 
-    Properties properties = new Properties()
-    properties.load(project.rootProject.file('local.properties').newDataInputStream())
-    def ndkdir = properties.getProperty('ndk.dir', null)
-    if (ndkdir == null)
-        throw new GradleException("NDK location not found. Define location with ndk.dir in the local.properties file or with an ANDROID_NDK_ROOT environment variable.")
-
-    return ndkdir
-}
-def getNdkBuildCmd() {
-    def ndkbuild = getNdkDir() + "/ndk-build"
-    if (Os.isFamily(Os.FAMILY_WINDOWS))
-        ndkbuild += ".cmd"
-
-    return ndkbuild
-}
 def getHgRevision() {
     def os = new ByteArrayOutputStream()
     exec {
@@ -107,11 +84,13 @@ def getHgRevision() {
 
     return os.toString()
 }
-def getDate() {
+
+static def getDate() {
     def date = new Date()
     def formattedDate = date.format('yyyy-MM-dd HH:mm:ss')
     return formattedDate
 }
+
 def getAndroidKeystore() {
     Properties properties = new Properties()
     properties.load(project.rootProject.file('ant.properties').newDataInputStream())
@@ -121,6 +100,7 @@ def getAndroidKeystore() {
 
     return keystore
 }
+
 def getAndroidStorePassword() {
     Properties properties = new Properties()
     properties.load(project.rootProject.file('ant.properties').newDataInputStream())
@@ -130,6 +110,7 @@ def getAndroidStorePassword() {
 
     return password
 }
+
 def getAndroidKeyAlias() {
     Properties properties = new Properties()
     properties.load(project.rootProject.file('ant.properties').newDataInputStream())
@@ -139,6 +120,7 @@ def getAndroidKeyAlias() {
 
     return keyalias
 }
+
 def getAndroidKeyPassword() {
     Properties properties = new Properties()
     properties.load(project.rootProject.file('ant.properties').newDataInputStream())
@@ -147,7 +129,4 @@ def getAndroidKeyPassword() {
         throw new GradleException("Key alias password not found. Define location with key.alias.password in the ant.properties file.")
 
     return password
-}
-
-dependencies {
 }
