--- a/app/src/main/jni/CMakeLists.txt
+++ b/app/src/main/jni/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.4.1)
 PROJECT(Unrar CXX)
 
 # additional compiler flags
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fvisibility=hidden")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fvisibility=hidden -fPIC")
 
 IF(ANDROID_ABI STREQUAL "armeabi-v7a")
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__ARM_V7__")
