--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
-
 android {
-    compileSdkVersion 23
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 25
+    buildToolsVersion '26.0.1'
 
     signingConfigs {
         release {
@@ -16,21 +15,21 @@ android {
     defaultConfig {
         applicationId 'net.kervala.comicsreader'
         minSdkVersion 9
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 28
         versionName "2.2." + getHgRevision()
         signingConfig signingConfigs.release
 
-		externalNativeBuild {
-			cmake {
-				arguments "-DANDROID_STL_FORCE_FEATURES=TRUE", "-DANDROID_PLATFORM=android-9"
-			}
-		}
+        externalNativeBuild {
+            cmake {
+                arguments "-DANDROID_STL_FORCE_FEATURES=TRUE", "-DANDROID_PLATFORM=android-9"
+            }
+        }
 
-		ndk {
-			abiFilters 'x86', 'armeabi-v7a'
-		}
-	}
+        ndk {
+            abiFilters 'x86', 'armeabi-v7a'
+        }
+    }
 
     buildTypes {
         release {
@@ -65,16 +64,13 @@ android {
         }
     }
 }
-
 // create a file "version.txt" in "app" folder with current version
 task generateVersion() << {
     file('build/version.txt').text = android.defaultConfig.versionName
 }
-
 tasks.withType(JavaCompile) {
     compileTask -> compileTask.dependsOn generateVersion
 }
-
 def getHgRevision() {
     def os = new ByteArrayOutputStream()
     exec {
@@ -84,13 +80,11 @@ def getHgRevision() {
 
     return os.toString()
 }
-
 static def getDate() {
     def date = new Date()
     def formattedDate = date.format('yyyy-MM-dd HH:mm:ss')
     return formattedDate
 }
-
 def getAndroidKeystore() {
     Properties properties = new Properties()
     properties.load(project.rootProject.file('ant.properties').newDataInputStream())
@@ -100,7 +94,6 @@ def getAndroidKeystore() {
 
     return keystore
 }
-
 def getAndroidStorePassword() {
     Properties properties = new Properties()
     properties.load(project.rootProject.file('ant.properties').newDataInputStream())
@@ -110,7 +103,6 @@ def getAndroidStorePassword() {
 
     return password
 }
-
 def getAndroidKeyAlias() {
     Properties properties = new Properties()
     properties.load(project.rootProject.file('ant.properties').newDataInputStream())
@@ -120,7 +112,6 @@ def getAndroidKeyAlias() {
 
     return keyalias
 }
-
 def getAndroidKeyPassword() {
     Properties properties = new Properties()
     properties.load(project.rootProject.file('ant.properties').newDataInputStream())
@@ -129,4 +120,7 @@ def getAndroidKeyPassword() {
         throw new GradleException("Key alias password not found. Define location with key.alias.password in the ant.properties file.")
 
     return password
+}
+
+dependencies {
 }
